// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders results, previous and next 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <div>
          Showing 13 - 15 of 20 results
        </div>
      </div>
    </ForwardRef>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div>
            <a
              href="?mock-4"
            >
              <div>
                <svg
                  height={12}
                  viewBox="42 12 60 120"
                  width={7}
                >
                  <g
                    fill="#006699"
                  >
                    <path
                      d="8cd5ea7b91eea38d77fd9ad20f3573cb"
                    />
                  </g>
                </svg>
                <div>
                  <span>
                    Previous
                    <ForwardRef>
                      <span>
                         page
                      </span>
                    </ForwardRef>
                  </span>
                </div>
              </div>
            </a>
          </div>
        </ForwardRef>
        <ForwardRef>
          <div>
            <a
              href="?mock-6"
            >
              <div>
                <div>
                  <span>
                    Next
                    <ForwardRef>
                      <span>
                         page
                      </span>
                    </ForwardRef>
                  </span>
                </div>
                <svg
                  height={12}
                  viewBox="42 12 60 120"
                  width={7}
                >
                  <g
                    fill="#006699"
                  >
                    <path
                      d="9a11f164df72df4cb9ea6a3266824472"
                    />
                  </g>
                </svg>
              </div>
            </a>
          </div>
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;

exports[`2. renders with no results 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div>
            <a
              href="?mock-4"
            >
              <div>
                <svg
                  height={12}
                  viewBox="42 12 60 120"
                  width={7}
                >
                  <g
                    fill="#006699"
                  >
                    <path
                      d="8cd5ea7b91eea38d77fd9ad20f3573cb"
                    />
                  </g>
                </svg>
                <div>
                  <span>
                    Previous
                    <ForwardRef>
                      <span>
                         page
                      </span>
                    </ForwardRef>
                  </span>
                </div>
              </div>
            </a>
          </div>
        </ForwardRef>
        <ForwardRef>
          <div>
            <a
              href="?mock-6"
            >
              <div>
                <div>
                  <span>
                    Next
                    <ForwardRef>
                      <span>
                         page
                      </span>
                    </ForwardRef>
                  </span>
                </div>
                <svg
                  height={12}
                  viewBox="42 12 60 120"
                  width={7}
                >
                  <g
                    fill="#006699"
                  >
                    <path
                      d="9a11f164df72df4cb9ea6a3266824472"
                    />
                  </g>
                </svg>
              </div>
            </a>
          </div>
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;

exports[`3. does not give a count smaller than a single page 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <div>
          Showing 1 - 20 of 20 results
        </div>
      </div>
    </ForwardRef>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div />
        </ForwardRef>
        <ForwardRef>
          <div />
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;

exports[`4. limits the starting result to the total count 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <div>
          Showing 20 - 20 of 20 results
        </div>
      </div>
    </ForwardRef>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div>
            <a
              href="?mock-3"
            >
              <div>
                <svg
                  height={12}
                  viewBox="42 12 60 120"
                  width={7}
                >
                  <g
                    fill="#006699"
                  >
                    <path
                      d="8cd5ea7b91eea38d77fd9ad20f3573cb"
                    />
                  </g>
                </svg>
                <div>
                  <span>
                    Previous
                    <ForwardRef>
                      <span>
                         page
                      </span>
                    </ForwardRef>
                  </span>
                </div>
              </div>
            </a>
          </div>
        </ForwardRef>
        <ForwardRef>
          <div />
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;

exports[`5. renders previous and not next 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div>
            <a
              href="?mock-4"
            >
              <div>
                <svg
                  height={12}
                  viewBox="42 12 60 120"
                  width={7}
                >
                  <g
                    fill="#006699"
                  >
                    <path
                      d="8cd5ea7b91eea38d77fd9ad20f3573cb"
                    />
                  </g>
                </svg>
                <div>
                  <span>
                    Previous
                    <ForwardRef>
                      <span>
                         page
                      </span>
                    </ForwardRef>
                  </span>
                </div>
              </div>
            </a>
          </div>
        </ForwardRef>
        <ForwardRef>
          <div />
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;

exports[`6. renders next and not previous 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div />
        </ForwardRef>
        <ForwardRef>
          <div>
            <a
              href="?mock-2"
            >
              <div>
                <div>
                  <span>
                    Next
                    <ForwardRef>
                      <span>
                         page
                      </span>
                    </ForwardRef>
                  </span>
                </div>
                <svg
                  height={12}
                  viewBox="42 12 60 120"
                  width={7}
                >
                  <g
                    fill="#006699"
                  >
                    <path
                      d="9a11f164df72df4cb9ea6a3266824472"
                    />
                  </g>
                </svg>
              </div>
            </a>
          </div>
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;
